--- a/Demo.html
+++ b/Demo.html
@@ -5,14 +5,16 @@
 </head>
 <body>
 	<h1>Student Bio</h1>
-	<h2>Aaron Kriegler</h2>
-	<img src="https://media.giphy.com/media/SV0hBOk5DvTSU/giphy.gif" alt="200 x 200" height="200" width="200">
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquam dolor sit amet mauris eleifend, in mollis augue rutrum. Nullam cursus urna nisl. Nulla gravida egestas scelerisque. Ut fringilla scelerisque odio, vitae sagittis dolor scelerisque eget. Nunc suscipit sapien ac ornare maximus. Maecenas convallis lectus nec condimentum mattis. Aliquam erat volutpat. Quisque tempor, est aliquet dapibus venenatis, eros massa aliquam justo, in laoreet ante quam nec magna. Curabitur facilisis lacus id tellus luctus, elementum eleifend nibh elementum. Proin sit amet urna nibh.</p>
+	<h2>Your Name</h2>
+	<img src="http://via.placeholder.com/200x200" alt="200 x 200" height="200" width="200">
+        <p>Write a short paragraph or two about yourself, or use placeholder text from<a href="www.lipsum.com">www.lipsum.com</a></p>
+        <section>
 	<h2>Contact Info</h2>
 	<ul>
-		<li>Email: <a href="mailto:a.kriegler@gmail.com">a.kriegler@gmail.com</a></li>
-		<li>Github: <a href="https://github.com/krieg2">krieg2</a></li>
+		<li>Email: <a href="mailto:someplace@gmail.com">someplace@gmail.com</a></li>
+		<li>Github: <a href="https://github.com/sampleName">sampleName</a></li>
 		<li>Portfolio: <a href="">coming soon</a></li>
 	</ul>
+        </section>
 </body>
 </html>
