--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,9 @@
   </div>
 
   </div>
-  <footer class="footer">© Copyright 2017 Aaron Kriegler</footer>
+
+  <div class="footerContainer">
+    <footer class="footer">© Copyright 2017 Aaron Kriegler</footer>
+  </div>
 </body>
 </html>
