--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     </div>
   </header>
 
-
   <div class="container">
 
     <section id="main-bio">
@@ -81,6 +80,9 @@
   </div>
 
   </div>
-  <footer class="footer">© Copyright 2017 Aaron Kriegler</footer>
+
+  <div class="footerContainer">
+    <footer class="footer">© Copyright 2017 Aaron Kriegler</footer>
+  </div>
 </body>
 </html>
